kubedefs/appdeploy.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  selector:
    matchLabels:
      app: vproapp
  replicas: 1
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: vproapp
        image: sasidharsaz/vprofileapp    
        ports:
        - name: vproapp-port
          containerPort: 8080       
      imagePullSecrets:
      - name: myregistrykey
