kubedefs/dbdeploy.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: sasidharsaz/vprofiledb
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: vpro-db-data        
        ports:
        - name: vprodb-port
          containerPort: 3306
      imagePullSecrets:
      - name: myregistrykey

      initcontainers:
      - name: remove-lost+found-file
        image: busybox:latest
        args: ["rm", "-rf", "/var/lib/mysql/lost+found"]
        volumeMounts:
         - name: vpro-db-data
           mountPath: /var/lib/mysql

      volumes:
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: pv-claim
